--- a/locked.html
+++ b/locked.html
@@ -325,7 +325,7 @@
 		</div>
 		<div class="content">
 			<img src="images/complex/slime4.png" alt="" onclick="openModal(this)" loading="lazy">
-				<figcaption> <div onclick="showCaption(this)" > <p class="description"> [CPX-259-1] </p> <h6>
+				<figcaption> <div onclick="showCaption(this)" > <p class="description"> [CPX-259-4] </p> <h6>
 					Prénom : Bianca <br>
 					<br>
 					Description Physique :	<br>
@@ -869,7 +869,7 @@
 			<div class="content">
 				<img src="images/complex/rabbit-girl.png" alt="" onclick="openModal(this)" loading="lazy">
 					<figcaption> <div onclick="showCaption(this)" > <p class="description"> [CPX-654] </p> <h6>
-						Prénom : Lilith <br>
+						Prénom : Lylia <br>
 						<br>
 						Description physique : <br>
 						<br>
