--- a/Militaire.html
+++ b/Militaire.html
@@ -104,7 +104,12 @@
 		  <span class="timestamp">0:00 / 0:00</span>
 		  <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="0.7">
 		</div>
-	  </div>
+	</div>
+	  	
+	<div class="flag" >
+		<img src="images/Flag Haremcia.png" alt="test" loading="lazy">
+	</div>
+		
 
 	<h2>L'armée</h2>
 
