--- a/GED.html
+++ b/GED.html
@@ -88,6 +88,10 @@
 		</div>
     </div>
 
+	<div class="flag" >
+		<img src="images/Flag GED.png" alt="test" loading="lazy">
+	</div>
+
 	<h2>Armée. </h2>
 	
     <div class="gallery" id="#">
