--- a/RSS.html
+++ b/RSS.html
@@ -88,6 +88,10 @@
     </div>
     </div>
 
+	<div class="flag" >
+		<img src="images/Flag RSS.png" alt="test" loading="lazy">
+	</div>
+	
 	<h2>Pouvoir. </h2>	
 	
     <div class="gallery" id="#">
