--- a/Militaire.html
+++ b/Militaire.html
@@ -107,7 +107,7 @@
 	</div>
 	  	
 	<div class="flag" >
-		<img src="images/Flag Haremcia.png" alt="test" loading="lazy">
+		<img src="images/Flag/Flag Haremcia.png" alt="test" loading="lazy">
 	</div>
 		
 
