--- a/map.html
+++ b/map.html
@@ -85,28 +85,28 @@
   <map name="image-map">
     <area target="" alt="EIC" title="État Indépendant du Complex" href="locked.html"
     coords="101,608,125,647,170,666,206,675,213,703,232,682,248,695,266,703,262,678,275,656,264,642,278,628,279,603,298,583,307,566,294,552,309,550,328,544,313,532,319,526,312,508,295,511,291,482,285,469,295,449,278,407,307,395,301,379,297,370,297,340,313,340,309,302,312,271,303,245,303,222,284,208,290,192,260,174,284,153,264,118,201,153,161,171,133,199,101,221,86,249,66,280,69,320,52,359,52,427,55,517,80,566"
-    shape="poly" onmouseover="showImage('images/Flag Complex.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag Complex.png')" onmouseout="hideImage()">
     <area target="" alt="GED" title="GED" href="GED.html"
     coords="293,113,352,101,369,103,396,92,419,89,446,78,481,69,530,58,586,53,606,50,623,48,682,41,730,53,749,44,788,45,835,44,848,60,845,95,841,134,842,175,853,173,817,172,807,160,786,156,754,151,715,147,671,154,643,144,617,159,593,167,565,167,528,172,490,179,466,179,440,185,425,181,403,188,385,182,369,195,354,206,325,195,337,154,313,150,318,128,294,137,287,122"
-    shape="poly" onmouseover="showImage('images/Flag GED.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag GED.png')" onmouseout="hideImage()">
     <area target="" alt="Haremcia" title="Haremcia" href="index.html"
     coords="347,209,347,230,357,246,374,246,379,279,375,299,359,302,351,329,362,351,348,362,346,405,363,430,357,445,334,432,323,436,326,463,331,488,346,502,338,516,357,532,369,554,396,551,432,550,450,561,477,557,511,555,539,557,580,553,608,552,636,545,681,538,736,517,749,491,780,451,804,418,804,401,832,371,838,334,829,304,841,277,836,258,826,242,836,215,832,187,811,171,777,150,704,146,637,147,595,164,533,167,410,183,381,183"
-    shape="poly" onmouseover="showImage('images/Flag Haremcia.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag Haremcia.png')" onmouseout="hideImage()">
     <area target="" alt="RSS" title="RSS" href="RSS.html"
     coords="346,542,341,585,359,597,338,597,322,594,344,625,351,645,360,666,353,688,348,715,335,707,323,690,313,709,306,716,320,719,337,735,369,735,388,737,438,735,487,740,506,740,511,750,547,750,592,745,633,747,679,763,723,765,743,762,718,741,711,723,712,704,715,690,729,673,743,657,739,629,755,604,765,597,748,580,768,575,770,552,773,542,736,513,690,536,648,538,366,551,412,551,460,558,508,558,558,552,603,550"
-    shape="poly" onmouseover="showImage('images/Flag RSS.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag RSS.png')" onmouseout="hideImage()">
     <area target="" alt="GWE" title="GWE" href="https://superwaifu.github.io/Holy-Reich/GWEmpire.html"
     coords="849,66,848,94,853,112,850,133,849,146,844,163,851,189,884,195,910,194,930,196,949,182,968,188,1002,186,1027,186,1055,204,1067,219,1086,211,1086,195,1071,166,1103,154,1127,132,1089,123,1089,108,1106,111,1117,111,1136,92,1142,76,1118,88,1115,69,1105,70,1112,51,1124,54,1149,63,1173,51,1149,38,1099,47,1075,42,1045,32,1014,30,980,41,931,47,878,43,852,46,845,56"
-    shape="poly" onmouseover="showImage('images/Flag GWE.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag GWE.png')" onmouseout="hideImage()">
     <area target="" alt="Holy-Reich" title="Holy-Reich" href="https://superwaifu.github.io/Holy-Reich/"
     coords="849,203,842,234,867,247,857,251,841,282,838,309,852,335,848,352,839,368,829,387,817,394,821,419,826,452,817,500,799,521,821,531,845,536,854,553,866,561,891,576,904,587,919,602,941,637,967,645,986,655,1028,660,1088,668,1123,657,1193,648,1227,624,1249,604,1269,588,1287,584,1305,584,1331,582,1342,569,1348,549,1365,532,1386,521,1377,497,1392,491,1387,460,1398,445,1387,425,1395,407,1376,388,1342,369,1317,348,1290,319,1268,297,1240,282,1230,257,1197,255,1193,236,1163,216,1131,227,1129,208,1103,217,1072,213,1043,195,1003,180,954,182"
-    shape="poly" onmouseover="showImage('images/Flag HR.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag HR.png')" onmouseout="hideImage()">
     <area target="" alt="Poussière d'or" title="Poussière d'Or" href="https://superwaifu.github.io/Holy-Reich/PoussiereDor.html"
     coords="785,534,762,583,746,616,737,655,715,684,711,718,723,743,748,763,783,766,820,773,858,761,892,769,914,789,957,783,1007,780,1031,782,1093,777,1126,769,1175,766,1185,777,1208,788,1241,769,1280,758,1278,721,1297,742,1312,736,1293,711,1293,692,1277,668,1275,630,1258,609,1222,623,1187,643,1150,658,1109,660,1075,674,1040,662,991,660,960,649,911,602,895,579,860,568,857,545,827,537,802,531"
-    shape="poly" onmouseover="showImage('images/Flag PO.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag PO.png')" onmouseout="hideImage()">
     <area target="" alt="Royaume Céleste" title="Royaume Céleste" href="https://superwaifu.github.io/Holy-Reich/RoyaumeCeleste.html"
     coords="1314,580,1339,580,1356,542,1378,520,1389,501,1395,474,1392,458,1399,436,1399,410,1374,392,1345,368,1315,345,1299,324,1280,305,1262,289,1237,270,1218,253,1194,246,1156,209,1154,175,1184,171,1174,128,1194,128,1224,112,1197,94,1230,81,1258,65,1199,37,1277,38,1315,52,1339,71,1376,84,1395,102,1409,119,1430,115,1445,127,1468,133,1493,127,1508,156,1510,192,1526,174,1515,150,1541,174,1545,206,1569,225,1591,228,1608,255,1611,290,1635,305,1636,333,1626,383,1611,408,1604,451,1595,486,1599,535,1597,567,1567,588,1558,613,1530,648,1495,662,1495,692,1480,718,1430,753,1409,744,1386,750,1361,751,1342,762,1321,754,1364,728,1359,697,1337,700,1342,648,1343,625,1309,625,1294,588"
-    shape="poly" onmouseover="showImage('images/Flag RC.png')" onmouseout="hideImage()">
+    shape="poly" onmouseover="showImage('images/Flag/Flag RC.png')" onmouseout="hideImage()">
   </map>
 </div>
 
