--- a/GED.html
+++ b/GED.html
@@ -89,7 +89,7 @@
     </div>
 
 	<div class="flag" >
-		<img src="images/Flag GED.png" alt="test" loading="lazy">
+		<img src="images/Flag/Flag GED.png" alt="test" loading="lazy">
 	</div>
 
 	<h2>Armée. </h2>
