--- a/RSS.html
+++ b/RSS.html
@@ -89,7 +89,7 @@
     </div>
 
 	<div class="flag" >
-		<img src="images/Flag RSS.png" alt="test" loading="lazy">
+		<img src="images/Flag/Flag RSS.png" alt="test" loading="lazy">
 	</div>
 	
 	<h2>Pouvoir. </h2>	
