--- a/locked.html
+++ b/locked.html
@@ -496,7 +496,7 @@
 			Leur état de santé est critique, avec des signes évidents de malnutrition.<br>
 			<br>
 			CPX-405-3 : Souffrant de lésions cutanées importantes et d’une infection sévère.<br>
-			Elle était concientes et réceillé, attaquant un des équipiers de récupération, le tuant pendant l'attaque, elle a été endormies de force.
+			Elle était concientes et réceillé, attaquant un des équipiers de récupération, le tuant pendant l'attaque, elle a été endormies de force.<br>
 			<br>
 			CPX-405-4 : Est retrouvés mort dans sa salle de confinement, l'autopsie à démontrer qu'elle était morte de faim.
 				<br><br>
