--- a/FNC.html
+++ b/FNC.html
@@ -88,7 +88,7 @@
 		<h4> Un bijou de technologie </h4>
 	</div>
 
-	<div onclick="lore(this)"> <h5>❯ <i>[Récupération sûr site]</i></h5>
+	<div class="report" onclick="lore(this)"> <h5>❯ <i>[LOG RCS-032]</i></h5>
 		<h4>
 			<u> Rapport de Récupération </u>
 			<br><br>
@@ -133,7 +133,7 @@
 			[FIN DU RAPPORT]
 		</h4>
 	</div>
-	<div onclick="lore(this)"> <h5>❯ <i>[Rapport de réparation]</i></h5>
+	<div class="report" onclick="lore(this)"> <h5>❯ <i>[LOG RCS-036]</i></h5>
 		<h4>
 			<u> Rapport de réparation </u>
 			<br><br>
@@ -172,7 +172,6 @@
 			[FIN DU RAPPORT]
 		</h4>
 	</div>
-
 
 	<div class="gallery">
 		<div class="content">
@@ -329,7 +328,7 @@
 		</div>
 		<div class="content">
 			<div class="description">
-				<h8> • Marie 1m90)</h8>
+				<h8> • Marie (1m90)</h8>
 			</div>
 			<img src="images/fazclaire/marie.png" alt="" loading="lazy" onclick="openModal(this)">
 			<figcaption>
