--- a/locked.html
+++ b/locked.html
@@ -89,29 +89,29 @@
     </div>
     </div>
 	
-	<div> <h3> Liste Effectif :</h3> 
+	<div> <h3> Recensement :</h3> 
 		<ul class="list">
-		<li><strong> • Entitées :</strong>
-			<ul>
-				<li> - <a href="#animatronique"> CPX-055 | Animatroniques </a> </li>
-				<li> - <a href="#lamiak"> CPX-156 | Lamiak </a> </li>
-				<li> - <a href="#slime"> CPX-259 | Slimes </a> </li>
-				<li> - <a href="#sirène"> CPX-368 | Sirènes </a> </li>
-				<li> - <a href="#tigre"> CPX-405 | Projet-T </a> </li>
-				<li> - <a href="#wolf"> CPX-505 | Projet-W </a> </li>
-				<li> - <a href="#vampire"> CPX-351 | Vampires </a> </li>
-				<li> - <a href="#malo"> CPX-735 | MaLo </a> </li>
-				<li> - <a href="#rabbit"> CPX-654 | ʇᴉbbɐɹ  </a> </li> 
-			</ul>
-		</li>
-		<li><strong> • Staff :</strong>
-			<ul>
-				<li> - <a href="#security"> Security Team </a> </li>
-				<li> - <a href="#scientist"> Scientifiques Team </a> </li>
-				<li> - <a href="#hacker"> Hacker Team </a> </li>
-				<li> - <a href="#ingenieur"> Team Ingénieur </a> </li>
-			</ul>
-		</li>
+			<li><strong> • Entitées :</strong>
+				<ul>
+					<li class="entity_list"> - <a href="#animatronique"> CPX-055 | Animatroniques </a> </li>
+					<li class="entity_list"> - <a href="#lamiak"> CPX-156 | Lamiak </a> </li>
+					<li class="entity_list"> - <a href="#slime"> CPX-259 | Slimes </a> </li>
+					<li class="entity_list"> - <a href="#sirène"> CPX-368 | Sirènes </a> </li>
+					<li class="entity_list"> - <a href="#tigre"> CPX-405 | Projet-T </a> </li>
+					<li class="entity_list"> - <a href="#wolf"> CPX-505 | Projet-W </a> </li>
+					<li class="entity_list"> - <a href="#vampire"> CPX-351 | Vampires </a> </li>
+					<li class="entity_list"> - <a href="#malo"> CPX-735 | MaLo </a> </li>
+					<li class="entity_list"> - <a href="#rabbit"> CPX-654 | ʇᴉbbɐɹ  </a> </li> 
+				</ul>
+			</li>
+			<li><strong> • Staff :</strong>
+				<ul>
+					<li class="entity_list"> - <a href="#security"> Security Team </a> </li>
+					<li class="entity_list"> - <a href="#scientist"> Scientifiques Team </a> </li>
+					<li class="entity_list"> - <a href="#hacker"> Hacker Team </a> </li>
+					<li class="entity_list"> - <a href="#ingenieur"> Team Ingénieur </a> </li>
+				</ul>
+			</li>
 		</ul>
 	</div>
 
@@ -953,7 +953,6 @@
 		</div>
 
 		<div class="report" onclick="lore(this)"> <h5>❯ <I>[LOG ML-001]</I></h5> <h4>
-			
 			<u> LOG ML-001 </u>
 			<br><br>
 			Date: ██/██/████ <br>
