--- a/Domestique.html
+++ b/Domestique.html
@@ -87,7 +87,21 @@
 	  <figcaption> Intérieur d'un des nombreux salons du manoir </figcaption>
     </div>
     </div>
-	
+
+    <div class="gallery" id="Directeur">
+		<div class="description" onclick="lore(this)">
+			<h3>Directeur</h3>
+			<h4> Le directeur. </h4>
+		</div>
+		<div class="content">
+			<img src="images/complex/directeur.png" alt="" onclick="openModal(this)" loading="lazy">
+			<figcaption> <div onclick="showCaption(this)" > <p class="description"> Seule image de qualité du Directeur. </p> <h6>
+				<a href="Bureau.html">Bureau du Directeur</a>
+			</h6> </div> </figcaption>
+		</div>
+    </div>
+
+
     <div class="gallery" id="Impératrice">
 		<div class="description" onclick="lore(this)">
 			<h3>Impératrice suprême</h3>
