--- a/Hierachie.html
+++ b/Hierachie.html
@@ -87,7 +87,7 @@
         <ul class="ul">
             <li class="mage-popup li" onclick="toggleImage(this)">
                 <div class="org-list"> <div id="arrow" class="arrow"> ❯ </div> <div class="text"> Directeur </div> </div>
-                <img src="images/complex/director.png" class="popup-image">
+                <img src="images/complex/directeur.png" class="popup-image">
             </li>                    
         </ul>
     </div>
