--- a/locked.html
+++ b/locked.html
@@ -1349,7 +1349,7 @@
 						<br>
 						Description physique : <br>
 						<br>
-						CPX-654 est une entité démoniaque de 1m90. <i>(Sans les oreilles)</i>
+						CPX-654 est une entité démoniaque de 1m45. <i>(Sans les oreilles)</i>
 						Elle présente l'apparence d'un lapin anthropomorphe avec des courbes accentuées, combinant des traits de lapin et de corps humanoïde. <br>
 						Ses yeux sont d'un rouge intense et brillant, ayant des pupilles en forme de coeur.<br>
 						Elle possède des oreilles de lapin de 40 cm de long. Mais aussi des petites cornes de démon. <br>
@@ -1612,7 +1612,7 @@
 			Date: ██/██/████ <br>
 			Lieu: Salle d'interview ██, Complex <br>
 			Agent en charge : Le Directeur.
-			<br><br>
+		  	<small> <br><br>
 			Directeur : Bonjour, CPX-941-2A. Merci de vous être présentée aujourd'hui.
 			<br><br>
 			CPX-941-2A : (soupire) Pas de souci. On m'a dit que vous vouliez me parler directement. C'est si grave que ça ?
@@ -2065,6 +2065,8 @@
 	<div class="description"> <h3> <a href="Hierachie.html"> ❯ Composition Hiérarchie </a> </h3> </div> 
 	<p> </p>
 	<div class="description"> <h3> <a href="Classification.html"> ❯ Classification des entitées </a> </h3> </div> 
+	<p> </p>
+	<div class="description"> <h3> <a href="Bureau.html"> ❯ Bureau du Directeur </a> </h3> </div> 
 
 
 
