--- a/FNC.html
+++ b/FNC.html
@@ -4,7 +4,7 @@
 	<title>Frenni's Fazclaire NightClub</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style1.css">
-	<link rel="stylesheet" href="css/style2.css">
+	<link rel="stylesheet" href="css/complex.css">
 	<link rel="shortcut icon" href="images/icons/FNC.png" />
 	<script src="code.js" defer></script>
 </head>
