--- a/Militaire.html
+++ b/Militaire.html
@@ -93,17 +93,18 @@
 	<h2>L'hymne d'Haremcia</h2>
 
 	<div class="paysage">
-		<audio class="audio-player" src="sons/Haremcia Hymne v2.mp3"></audio>
-		<div class="custom-audio-player">
-		  <button class="play-button control-button">Play</button>
-		  <button class="pause-button control-button">Pause</button>
-		  <button class="stop-button control-button">Stop</button>
-		  <div class="progress-container">
-			<div class="progress-bar"></div>
-		  </div>
-		  <span class="timestamp">0:00 / 0:00</span>
-		  <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="0.7">
-		</div>
+        <audio class="audio-player" src="sons/Haremcia Hymne v2.mp3"></audio>
+        <div class="custom-audio-player">
+            <button class="play-button control-button"><img src="images/icons/play.png" alt=""></button>
+            <button class="pause-button control-button"><img src="images/icons/pause.png" alt=""></button>
+            <button class="stop-button control-button"><img src="images/icons/stop.png" alt=""></button>
+          <div class="progress-container">
+            <div class="progress-bar"></div>
+          </div>
+          <span class="timestamp">0:00 / 0:00</span>
+          <button class="mute-button control-button"><img src="images/icons/mute-off.png" alt=""></button>
+          <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+        </div>
 	</div>
 	  	
 	<div class="flag" >
