--- a/Militaire.html
+++ b/Militaire.html
@@ -90,7 +90,7 @@
 		</div>
     </div>
 		
-	<h2>L'hymne d'Haremcia</h2>
+	<h2><a href="Musiques.html">L'hymne d'Haremcia</a></h2>
 
 	<div class="paysage">
         <audio class="audio-player" src="sons/Haremcia Hymne v2.mp3"></audio>
@@ -101,7 +101,7 @@
           <div class="progress-container">
             <div class="progress-bar"></div>
           </div>
-          <span class="timestamp">0:00 / 0:00</span>
+          <span class="timestamp">0:00 / 3:28</span>
           <button class="mute-button control-button"><img src="images/icons/mute-off.png" alt=""></button>
           <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
         </div>
