--- a/Musiques.html
+++ b/Musiques.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style1.css">
 	<link rel="stylesheet" href="css/audio.css">
-	<link rel="shortcut icon" href="images/icons/icon4.png" />
+	<link rel="shortcut icon" href="images/icons/mute-off.png" />
 	<script src="code.js"></script>
 	<script src="audio.js"></script>
 </head>
